--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador de texto</title>
     <link rel="stylesheet" href="styles.css"/>
-    <link rel="icon" href="img/Logo.png" type="image/png"/>
+    <link rel="icon" href="Logo.png" type="image/png"/>
 </head>
 <body>
     <header>
         <a href="#" rel="">
-            <img src="img/Log2.png" alt="Logo Alura" class="Logo">
+            <img src="Log2.png" alt="Logo Alura" class="Logo">
         </a>
     </header>
 
@@ -18,7 +18,7 @@
         <section class="encriptador">
             <textarea class="encriptar" placeholder="Ingrese el texto aquí"></textarea>
             <div class="encriptador-aviso">
-                <img src="img/Vector.png" alt="Imagen Aviso" class="img-aviso">
+                <img src="Vector.png" alt="Imagen Aviso" class="img-aviso">
                 <p class="texto-aviso">Solo letras minúsculas y sin acentos.</p>
             </div>
             <div class="encriptador-contenedor">
@@ -28,7 +28,7 @@
         </section>
         <section class="tarjeta">
             <div class="tarjeta-contenedor">
-                <img src="img/Muñeco.png" alt="Imagen Muñeco" class="img-contenedor">
+                <img src="Muñeco.png" alt="Imagen Muñeco" class="img-contenedor">
                 <p class="texto-uno">Ningún texto fue encontrado.</p>
                 <p class="texto-dos">Ingrese el texto que deseas encriptar o desencriptar</p>
             </div>
@@ -40,10 +40,10 @@
     <footer>
         <p class="copyright">&copy; copyright 2024 / Encriptador de Texto / Desarrollado por Krystel</p>
         <a href="#" rel="">
-            <img src="img/lin.png" alt="Logo Linkedin" class="icono linked">
+            <img src="lin.png" alt="Logo Linkedin" class="icono linked">
         </a>
         <a href="#" rel="">
-            <img src="img/git.png" alt="Logo Github" class="icono git">
+            <img src="git.png" alt="Logo Github" class="icono git">
         </a>
     </footer>
     <!-- Modal para mensaje de éxito -->
